--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,6 @@
     <title>GiyuGG  |  Gr.11 Web Dev.</title>
 </head>
 <body>
-    
+    This is a test to make sure the server is working.
 </body>
 </html>
